--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-h">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-h">
     <div>
         <div>
             <div>
@@ -360,7 +360,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-x" style="background-image: url(assets/images/mbr-9.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-x" style="background-image: url(assets/images/mbr-21.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -447,7 +447,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-y" style="background-image: url(assets/images/mbr-20.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-y" style="background-image: url(assets/images/mbr-22.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -534,7 +534,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-10" style="background-image: url(assets/images/mbr-11.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-10" style="background-image: url(assets/images/mbr-23.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -609,7 +609,7 @@
     </div>
 </section>
 
-<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box1-16" style="background-image: url(assets/images/mbr-12.jpg); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-info mbr-info-extra mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box1-16" style="background-image: url(assets/images/mbr-24.jpg); padding-top: 30px; padding-bottom: 30px;">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -636,7 +636,7 @@
     </div>
 </section>
 
-<section class="mbr-info mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box2-15" style="background-image: url(assets/images/mbr-13.jpg); padding-top: 30px; padding-bottom: 30px;">
+<section class="mbr-info mbr-section mbr-section-md-padding mbr-parallax-background" id="msg-box2-15" style="background-image: url(assets/images/mbr-25.jpg); padding-top: 30px; padding-bottom: 30px;">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -659,7 +659,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="pricing-table1-17" style="background-image: url(assets/images/mbr-14.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-parallax-background" id="pricing-table1-17" style="background-image: url(assets/images/mbr-26.jpg); padding-top: 40px; padding-bottom: 40px;">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);">
     </div>
@@ -790,7 +790,7 @@ Tez orada siz bilan bog'lanishadi.
 Salomat bo'ling</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="dTv5bTTMIMis5Be/vQnj8rT+R/RTVeJfp+iv3MjmQfhRYQJ6wfDj9L4YC2qcZ6Pb64pt72Y4BMrU6lK6g35mqPR/06SIqpKIEt+v54e3QHWbUyRb7hnbVfMhHLPb73BW" data-form-email="true">
+                    <input type="hidden" value="xrqYOFAwWGXmVlWQQTnlzPbaGfCAfjxVrEgk9KWrfuXbAy24z3HZWI+j4B/7vaAZmacQxeh9I8qalHGDeAnOiA/qd79cwsrwV+OrEBbCu6/DB8aWl8eOz2NzAW81sm1F" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-1e-name">Ismi Sharifingiz (To'liq kiriting masalan Rasulov Akbar)</label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-1e-name">
