--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-h">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="6000" id="slider-h">
     <div>
         <div>
             <div>
@@ -360,7 +360,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-x" style="background-image: url(assets/images/mbr-21.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-x" style="background-image: url(assets/images/ganodsc04991.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -447,7 +447,7 @@
     </div>
 </section>
 
-<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-y" style="background-image: url(assets/images/mbr-22.jpg);">
+<section class="mbr-cards mbr-section mbr-section-nopadding mbr-parallax-background" id="features3-y" style="background-image: url(assets/images/ganodsc04991.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -790,7 +790,7 @@ Tez orada siz bilan bog'lanishadi.
 Salomat bo'ling</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="xrqYOFAwWGXmVlWQQTnlzPbaGfCAfjxVrEgk9KWrfuXbAy24z3HZWI+j4B/7vaAZmacQxeh9I8qalHGDeAnOiA/qd79cwsrwV+OrEBbCu6/DB8aWl8eOz2NzAW81sm1F" data-form-email="true">
+                    <input type="hidden" value="s1mNFQ9BWXPEAhQivhSsjds4bP0NU7ydXCimPhf20EjEPKosowGC/cDys8I83LHUkyup0hU1522dYFrVJ3lQl0rQVpJuZmL6ZR9hoazVqEOJQ/v8JnjCeoRN0zKFdIQc" data-form-email="true">
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-1e-name">Ismi Sharifingiz (To'liq kiriting masalan Rasulov Akbar)</label>
                         <input type="text" class="form-control input-sm input-inverse" name="name" required="" data-form-field="Name" id="contacts4-1e-name">
